<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MapMainActivity" >

    <TextView
        android:id="@+id/MLtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_location_text" />

    <TextView
        android:id="@+id/Dtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination_text" />

    <TextView
        android:id="@+id/GLtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/MLbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_location_btn" />

        <Button
            android:id="@+id/Dbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_btn" />

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment" />

</LinearLayout>
